# tali

./: CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  RELEASE.md  SECURITY.md
.codex/skills/tali-agent/: SKILL.md
.codex/skills/tali-agent/agents/: openai.yaml
.codex/skills/tali-agent/references/: live-logs-and-repair.md  manifest-authoring.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-crate.yml  release.yml  security.yml
scripts/: check-crates-version.py  check-licenses.py  check-release-metadata.py  install.ps1  install.sh  package-local.sh  release-check.sh
src/: cleanup.rs  cli.rs  condition.rs  doctor.rs  gitignore.rs  input.rs  interpolate.rs  logs.rs  main.rs  manifest.rs  runner.rs  safety.rs  self_test.rs  skill.rs  store.rs  update_check.rs
tests/: cli.rs
