[package]
name = "tali"
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
description = "An AI-friendly command manifest runner"
license = "MIT"
documentation = "https://docs.rs/tali"
readme = "README.md"
keywords = ["ai", "automation", "cli", "manifest"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/dist/", "/target/"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
directories = "5.0"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
